# retention_integration

./: .gitignore  .readthedocs.yaml  FINAL_REPORT_RETENTION_INTEGRATION.md  INTEGRATION_BLUEPRINT_RETENTION.md  LICENSE  MANIFEST.in  Makefile  README.md  RETENTION_INTEGRATION_DIFFICULTY.md  RETENTION_MDAO_FORMULAS.md  RETENTION_VALUE_ASSESSMENT.md  TIPSY_ENGINE_INTEGRATION_ASSESSMENT.md  __init__.py  benchmark  benchmark.py  build_all_wheels.sh  build_wheel.sh  mkdocs.yml  poc_test.py  precision.py  pyproject.toml  pytest.ini  requirements-benchmark.txt  requirements-dev.txt  requirements-train.txt  requirements.txt  setup.py  smart_replicator_test.py  test
.github/: CODEOWNERS
.github/workflows/: build-and-publish.yml  build-and-test.yml  install-latest.yml
benchmarking/: _checks.py  _precision.py  _registration.py  _timing.py  _utils.py
benchmarks/: benchmark_power_attention.py  benchmark_simple_attention.py  speed_report.py
csrc/experiment/: CMakeLists.txt  README.md
csrc/experiment/state_expand/: CMakeLists.txt  main.cu
csrc/power_attention/: CMakeLists.txt  api.cpp
csrc/state_kernel/: CMakeLists.txt  README.md
csrc/state_kernel/src/: chunk_state_bwd_bf16_kq_hdim32_deg4_sm80.cu  chunk_state_bwd_bf16_kq_hdim64_deg2_sm80.cu  chunk_state_bwd_fp16_kq_hdim32_deg4_sm80.cu  chunk_state_bwd_fp16_kq_hdim64_deg4_sm80.cu  chunk_state_fwd_bf16_kq_hdim32_deg4_sm80.cu  chunk_state_fwd_bf16_kq_hdim64_deg2_sm80.cu  chunk_state_fwd_fp16_kq_hdim32_deg4_sm80.cu  chunk_state_fwd_fp16_kq_hdim64_deg4_sm80.cu  chunk_state_fwd_kernel.h  chunk_state_launch_template.h  discumsum_bwd_bf16_sm80.cu  discumsum_bwd_fp16_sm80.cu  discumsum_bwd_fp32_sm80.cu  discumsum_fwd_bf16_sm80.cu  discumsum_fwd_fp16_sm80.cu  discumsum_fwd_fp32_sm80.cu  discumsum_launch_template.h  index.h  kernel_traits.h  layout.tex  main.cpp  query_state_bwd_bf16_kq_hdim32_deg4_sm80.cu  query_state_bwd_fp16_kq_hdim64_deg4_sm80.cu  query_state_bwd_kernel.h  query_state_fwd_bf16_kq_hdim32_deg2_sm80.cu  query_state_fwd_bf16_kq_hdim32_deg4_sm80.cu  query_state_fwd_bf16_kq_hdim64_deg4_sm80.cu  query_state_fwd_fp16_kq_hdim32_deg2_sm80.cu  query_state_fwd_fp16_kq_hdim64_deg4_sm80.cu  query_state_launch_template.h  state.h  static_switch.h
csrc/state_kernel/src/attention/: power.h  power_bwd_convert_kernel.h  power_bwd_hdim32_bf16_deg1_sm80.cu  power_bwd_hdim32_bf16_deg2_sm80.cu  power_bwd_hdim32_bf16_deg4_sm80.cu  power_bwd_hdim32_fp16_deg2_sm80.cu  power_bwd_hdim32_fp16_deg4_sm80.cu  power_bwd_hdim64_bf16_deg2_sm80.cu  power_bwd_hdim64_bf16_deg3_sm80.cu  power_bwd_hdim64_bf16_deg4_sm80.cu  power_bwd_hdim64_fp16_deg1_sm80.cu  power_bwd_hdim64_fp16_deg2_sm80.cu  power_fwd_hdim32_bf16_deg2_causal_sm80.cu  power_fwd_hdim64_bf16_deg1_causal_sm80.cu  power_fwd_hdim64_bf16_deg2_causal_sm80.cu  power_fwd_hdim64_bf16_deg4_causal_sm80.cu  power_fwd_hdim64_fp16_deg3_causal_sm80.cu  power_fwd_kernel.h  rotary.h  softmax.h
debug/: debug.py  jacob.py  playground.py  prof.py
deploy/: README.md  benchmark.py  client.py  generate.py  generate_stats.json.bak  generate_stats.json.bak.bak  plot.py  serve.py  train.py  train_power.py
deploy/datasets/: prepare_lc64.py  prepare_news.py
deploy/nanoGPT/: logger.py  model.py
docs/: benchmarking.md  index.md  installation.md  quickstart.md
docs/contributing/: index.md  release.md
docs/javascripts/: mathjax.js  readthedocs.js
docs/reference/: api.md
perf/: _benchmark.py  _checks.py  _inspect.py  _precision.py  _registration.py  _timing.py  _utils.py  benchmark.py  compare_w_triton.py  create_report.py  db.py  plot_reports.py  run.py  wsfr.ipynb
perf/ablations/: inference_runtime.py  model.py  training_speed.py  wsfr.ipynb
perf/benchmarks/: __init__.py  discumsum.py  fla.py  flash.py  power_full.py  query_state.py  runs.py  sdpa.py
perf/tests/: chunk_consistency_tests.py  common_tests.py  gqa_tests.py  inference_tests.py  power_full.py  test_list.py
plots/: benchmark_results_b_1_t_65536_n_64_h_8_d_64_dtype_bfloat16_device_cuda_deg_2_chunk_size_1024_gating_True_mode_bwd_compile_False.csv  kernel_speed_plot.py  xl_performance_plot.py
power_attention/: README.md  __init__.py  _config.py  _p1_full.py  _utils.py  checks.py  create_inputs.py  cuda.py  kernelgen.py  power_full.py  power_full_maker.py  reference.py  tests.py  triton.py  utils.py  vidrial.py  vidrial_reference.py
power_attention/_attention/: __init__.py  bwd.py  create_inputs.py  cuda.py  fwd.py  impl.py  impl_triton2.py  reference.py  tests.py  triton.py
power_attention/_chunk_state/: __init__.py  bwd.py  fwd.py  impl.py  reference.py  tests.py
power_attention/_discumsum/: __init__.py  bwd.py  cuda.py  fwd.py  impl.py  reference.py  tests.py  triton.py
power_attention/_expansion/: __init__.py  impl_triton.py
power_attention/_query_state/: __init__.py  bwd.py  create_inputs.py  cuda.py  fwd.py  impl.py  reference.py  reference_vidrial.py  reference_vidrial_fused.py  tests.py  triton.py  vidrial.py  vidrial_fused.py  vidrial_fused_kernel.py
power_attention/_tyle/: __init__.py  query_state.py  update_state.py
power_attention/_update_state/: __init__.py  bwd.py  (+9 more)
reports/: 202501180037_fakehash.yaml  202501200037_5a53809.yaml  202501200037_fakehash2.yaml  202501212226_7d658a9.yaml  202501220112_7e44953.yaml  202501220605_7254d87.yaml  202501221037_1ee0285.yaml
retention/: __init__.py  _utils.py  create_inputs.py  cuda.py  power_retention_maker.py  reference.py  triton.py  vidrial.py  vidrial_reference.py
scripts/: get_version.py  install_dev_deps.sh  regression_runs.sh  test_benchmark.sh  test_train.sh  version_check.py
state_kernel/: __init__.py  _p1_full.py  power_full.py  timing_utils.py
test/: analysis.py  prof.py  test_chunk_state.py  test_discumsum.py  test_quadratic_attention.py  test_query_state.py  test_recurrent_attention.py  utils.py
tests_and_benchmarks/: _benchmark.py  _checks.py  _registration.py  _timing.py  _utils.py  plot.py  run.py
train/: logger.py  model.py  prepare_lc64.py  prepare_owt.py  train.py
training/: configurator.py  logger.py  model.py  prepare_owt.py  train.py
(+168 files in other folders)
